# fillomino_solver

./: Cargo.toml
input/: 0406size=16.txt  0407size=16.txt  0413size=12.txt  0413size=8.txt  0423size=20.txt  0426size=12.txt  0426size=8.txt  dummy.txt  dummy2.txt  test  test2.txt  test3.txt  test4.txt  test5.txt
src/: board.rs  board_orig.rs  graph.rs  main.rs  reader.rs
