[package]
name = "fillomino"
version = "0.1.0"
authors = ["Alex Bumstead <alex.bumstead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
structopt = "0.3"
petgraph = "0.5"
ansi_term = "0.12"

[dev-dependencies]
rstest = "0.7"
